fixing header on mobile menu

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ h1,h2,h3,h4,h5,h6,
 
 #mobile-menu .header-container {
 	display: block;
-	width: 15rem;
+	width: 17rem;
 	margin: 1em auto;
 	padding-bottom: 1em;
 }
